--- a/BE/ML/Feature_Transformation_PCA.ipynb
+++ b/BE/ML/Feature_Transformation_PCA.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "dcea9353",
+   "metadata": {},
+   "source": [
+    "# To use PCA Algorithm for dimensionality reduction.\n",
+    "### You have a dataset that includes measurements for different variables on wine (alcohol, ash, magnesium, and so on). Apply PCA algorithm & transform this data so that most variations in the measurements of the variables are captured by a small number of principal components so that it is easier to distinguish between red and white wine by inspecting these principal components.\n",
+    "Dataset Link: https://media.geeksforgeeks.org/wp-content/uploads/Wine.csv"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "d0f78b93",
@@ -102,6 +112,12 @@
     "pca_df = pd.DataFrame(data=X_pca, columns=['Principal Component 1', 'Principal Component 2'])\n",
     "pca_df['Customer_Segment'] = y"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fd299af2",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
