--- a/BE/ML/RL_maze.ipynb
+++ b/BE/ML/RL_maze.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "d3e93708",
+   "metadata": {},
+   "source": [
+    "# Implement Reinforcement Learning using an example of a maze environment that the agent needs to explore."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "30e6d943",
