--- a/BE/ML/Classification_analysis_SVM.ipynb
+++ b/BE/ML/Classification_analysis_SVM.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "26f5f846",
+   "metadata": {},
+   "source": [
+    "# Implementation of Support Vector Machines (SVM) for classifying images of handwritten digits into their respective numerical classes (0 to 9). "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "b32ae1f3",
